# bap-frames

./: .gitignore  .gitmodules  .merlin  LICENSE  META  Makefile  README.md  _oasis  _tags  arch_bfd.ml  arch_bfd.mli  bap-traces.mllib  configure  metaframe.piqi  multi_libtrace.sh  myocamlbuild.ml  setup.data  setup.ml  trace_container.ml  trace_container.mli
cpp/: Makefile.in
cpp/libtrace/: Makefile.am  autogen.sh  configure.ac
cpp/libtrace/src/: Makefile.am
cpp/libtrace/src/cpp/: Makefile.am  Makefile.windows
cpp/libtrace/src/cpp/utils/: Makefile.am
lib/: .merlin  frame_arch.ml  frame_enum.ml  frame_enum.mli  frame_events.ml  frame_mach.ml  frame_reader.ml  frame_reader.mli
lib/bfd/: bfd.ml
lib/frames/: .merlin  frame_events.ml  frame_reader.ml
libtrace/: .gitignore  Makefile.am  autogen.sh  configure.ac
libtrace/src/: Makefile.am  copytrace.cpp  frame_arch.h  readtrace.cpp  trace.container.cpp  trace.container.hpp
pintraces/: gentrace.cpp
piqi/: cleanup.sh  compile_piqi.sh  frame.piqi  metaframe.piqi  stdframe.piqi
piqi/bil/: META  bap-serialize-bil.mllib  bil_piqi.ml  bil_piqi.mli  exp.piqi  type.piqi
piqi/trace/ocaml/: META  arch_bfd.ml  arch_bfd.mli  bap-traces.mllib  trace_container.ml  trace_container.mli
plugin/: .merlin  Makefile  frame_events.ml  frame_events.mli  frame_trace_plugin.ml
test/: .merlin  README.md  _tags  fetchlibs.sh  run_frames_tests.ml  test_enum.ml  tracedump-test.sh  tracedump.ml
